--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "next": "14.2.7",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^12.0.0",,
+    "postcss-preset-env": "^10.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"  
+}
   },
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.10"
   }
 }
