--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "next": "^12.0.0",,
+    "next": "^12.0.0",
     "postcss-preset-env": "^10.0.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"  
-}
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "eslint": "^8",
