--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
-  "name": "trulu-lesson-generator",
-  "version": "0.1.0",
-  "private": true,
+  "name": "your-project-name",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "cross-env NODE_OPTIONS='--openssl-legacy-provider' next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.7.7",
-    "next": "^10.2.3",
-    "postcss-preset-env": "^10.0.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "next": "^13.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "axios": "^0.21.1"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.7",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.10"
+    "cross-env": "^7.0.3",
+    "eslint": "8.0.0",
+    "eslint-config-next": "12.0.0"
   }
 }
