--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "cross-env NODE_OPTIONS='--openssl-legacy-provider' next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^13.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "axios": "^0.21.1"
+    "axios": "^1.7.7",
+    "next": "^14.2.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "eslint": "8.0.0",
-    "eslint-config-next": "12.0.0"
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^12.3.4"
   }
 }
