--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "your-project-name",
+  "name": "trulu-lesson-generator",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
@@ -10,9 +10,8 @@
   "dependencies": {
     "axios": "^1.7.7",
     "next": "^14.2.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "yarn": "^1.22.22"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
